# mastermind

./: bot.py  configuration.toml  func.py  main.py  mastermind.py  pyproject.toml  requirements.txt
json/dukeofarabia/: mastermind_leaderboard.json  messages.json
json/nightousama/: mastermind.json  mastermind_leaderboard.json  messages.json
json/paperrocker/: mastermind.json  messages.json
json/shakerz_92/: mastermind.json  mastermind_leaderboard.json  messages.json
static/: competition.css
static/competition/: script.js
static/css/: styles.css
templates/: c4arena.html  chat.html  login.html  mastermind.html  template.html
templates/includes/: competition.html  game.html  messages.html  script.js
